Fix line wrapping (hopefully)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -550,7 +550,7 @@ main {
   font-weight: var(--fw-3);
   line-height: 1.6;
   text-align: left;
-  white-space: no-wrap;
+  white-space: nowrap;
 }
 
 
